# MAArc

./: .gitignore  OPENCODE_CONTEXT.md  README.md  control.py  easing.py  pyproject.toml  requirements.txt
agent/: loading_detector.py  main.py  play_song.py  smoke_load_chart.py  smoke_loading_detector.py  touch_backends.py
assets/: interface.json
assets/config/: maa_pi_config.json
assets/resource/pipeline/: auto_play.json
autoplay/: __init__.py  debug_pipeline.py
autoplay/analyzer/: __init__.py  mode_analyzer.py
autoplay/cli/: app.py
autoplay/domain/: __init__.py  arcaea_ir.py  chart.py  config.py  errors.py
autoplay/gui/: app.py
autoplay/parser/: __init__.py  aff_ir_parser.py  aff_parser.py  scan.py
autoplay/runtime/: __init__.py  config_store.py  player.py
autoplay/solver/: __init__.py  coordinate.py  core.py  events.py
autoplay/vision/: __init__.py  detector.py  offline_tune.py
config/: calibration.json  chart.json  playback.json  vision.json
tests/samples/: basic_4k.aff  basic_6k_scenecontrol.aff  edge_zero_length_arc.aff  invalid_lines.aff  test_touchevent.aff  with_arctap.aff  with_designant.aff  with_timinggroup_noinput.aff
tests/samples/lostrequiem/: 3.aff
tests/samples/steganography_cut/: 3.aff
tests/samples/steganography_cut - 副本/: songlist
tests/samples/steganography_cut - 副本/Arcade/: Project.arcade
tests/samples/steganography_cut - 副本/Arcade/Autosave/: 3_2026-04-07 04-04-10.aff  3_2026-04-07 04-34-30.aff  3_2026-04-07 04-36-30.aff  3_2026-04-07 05-44-32.aff  3_2026-04-10 11-05-03.aff  3_2026-04-11 05-30-09.aff
(+1 files in other folders)
